<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023 Cyb3rKo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.cyb3rko.quicktrust.views.SelectableScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:id="@+id/apk_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:importantForAccessibility="no"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_apk" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/apk_card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.Material3.CardView.Filled"
                    android:id="@+id/packages_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:importantForAccessibility="no"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_apps" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="4dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/packages_card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/result_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:cardBackgroundColor="#757575"
                app:cardCornerRadius="20dp"
                app:contentPaddingBottom="4dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp"
                app:contentPaddingTop="4dp"
                app:strokeColor="@color/grey"
                tools:cardBackgroundColor="@color/verified"
                tools:strokeColor="@color/verified"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="✅️ PASS" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toStartOf="@id/hash_file_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/check_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hash_check_hint"
                        android:singleLine="true"
                        tools:ignore="VisualLintTextFieldSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/hash_file_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:contentDescription="@string/hash_import_button_desc"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_file"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/content_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textIsSelectable="true"
                tools:ignore="VisualLintLongText"
                tools:text="@string/debug_example_signature" />

        </LinearLayout>

    </de.cyb3rko.quicktrust.views.SelectableScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
